[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/hud.gd" type="Script" id=1]
[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="hud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -15.5
margin_bottom = 15.5
custom_fonts/font = SubResource( 1 )
text = "Coin Dash"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 147.0
rect_scale = Vector2( 0.991627, 1.03989 )

[node name="TimeLabel" type="Label" parent="MarginContainer"]
margin_right = 480.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
margin_right = 480.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 1 )
text = "0
"

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -120.0
margin_right = 80.0
margin_bottom = -30.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
